[package]
name = "libosdp-sys"
version = "0.1.3"
edition = "2021"
authors = ["Siddharth Chandrasekaran <sidcha.dev@gmail.com>"]
description = "Sys crate for https://github.com/goToMain/libosdp"
documentation = "https://docs.rs/libosdp-sys"
homepage = "https://libosdp.sidcha.dev/"
readme = "README.md"
repository = "https://github.com/goToMain/libosdp-sys"
license = "Apache-2.0"
keywords = ["osdp", "libosdp", "acs", "sia", "weigand"]
categories = ["development-tools", "embedded"]

[build-dependencies]
anyhow = "1.0.75"
bindgen = "0.69.1"
cc = "1.0.83"

[features]
packet_trace = []
data_trace = []
skip_mark_byte = []
