[package]
name = "libosdp-sys"
version = "3.0.3"
edition = "2021"
authors = ["Siddharth Chandrasekaran <sidcha.dev@gmail.com>"]
description = "Sys crate for https://github.com/goToMain/libosdp"
documentation = "https://docs.rs/libosdp"
homepage = "https://libosdp.sidcha.dev/"
readme = "README.md"
repository = "https://github.com/goToMain/libosdp-rs"
license = "Apache-2.0"
keywords = ["osdp", "libosdp", "acs", "sia", "weigand"]
categories = ["development-tools", "embedded"]

[build-dependencies]
anyhow = "1.0.75"
bindgen = "0.69.1"
build-target = "0.4.0"
cc = "1.0.83"

[features]
packet_trace = []
data_trace = []
skip_mark_byte = []
