[package]
name = "libosdp-sys"
version = "3.2.1"
edition = "2021"
authors = ["Siddharth Chandrasekaran <sidcha.dev@gmail.com>"]
description = "Sys crate for https://github.com/goToMain/libosdp"
documentation = "https://docs.rs/libosdp-sys"
homepage = "https://doc.osdp.dev/"
readme = "README.md"
repository = "https://github.com/goToMain/libosdp-rs"
license = "Apache-2.0"
keywords = ["osdp", "libosdp", "acs", "sia", "wiegand"]
categories = ["development-tools", "embedded"]

[build-dependencies]
anyhow = "1.0.100"
bindgen = "0.72.1"
build-target = "0.8.0"
cc = "1.2.54"

[features]
packet_trace = []
data_trace = []
skip_mark_byte = []
