[package]
edition = "2021"
name = "libosdp"
version = "0.1.9"
authors = ["Siddharth Chandrasekaran <sidcha.dev@gmail.com>"]
description = "Library implementation of IEC 60839-11-5 OSDP (Open Supervised Device Protocol)"
documentation = "https://docs.rs/libosdp"
homepage = "https://libosdp.sidcha.dev/"
readme = "README.md"
repository = "https://github.com/goToMain/libosdp-rs"
license = "Apache-2.0"
keywords = ["osdp", "libosdp", "acs", "sia", "weigand"]
categories = ["development-tools", "embedded"]

[dependencies]
bitflags = "2.4.0"
embedded-io = { version = "0.6.1", features = ["alloc"] }
libosdp-sys = { path = "../libosdp-sys", default-features = false }
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive", "alloc"], default-features = false }
thiserror = { version = "1.0.50", optional = true }

[dev-dependencies]
env_logger = "0.11.3"
multiqueue = "0.3.2"
rand = "0.8.5"
ringbuf = "0.3.3"
sha256 = "1.5.0"

[features]
default = ["std"]
std = ["libosdp-sys/std", "thiserror", "serde/std"]

[[example]]
name = "cp"
required-features = ["std"]

[[example]]
name = "pd"
required-features = ["std"]
