[package]
edition = "2021"
name = "libosdp"
version = "0.2.0"
authors = ["Siddharth Chandrasekaran <sidcha.dev@gmail.com>"]
description = "Library implementation of IEC 60839-11-5 OSDP (Open Supervised Device Protocol)"
documentation = "https://docs.rs/libosdp"
homepage = "https://doc.osdp.dev/"
readme = "README.md"
repository = "https://github.com/goToMain/libosdp-rs"
license = "Apache-2.0"
keywords = ["osdp", "libosdp", "acs", "sia", "wiegand"]
categories = ["development-tools", "embedded"]

[dependencies]
bitflags = "2.10.0"
embedded-io = { version = "0.7.1", features = ["alloc"] }
libosdp-sys = "3.2.0"
log = { version = "0.4.29", optional = true }
serde = { version = "1.0.228", features = ["derive", "alloc"], default-features = false }
serde_arrays = "0.2.0"
thiserror = { version = "2.0.18", optional = true }
defmt = { version = "1.0", optional = true, features = ["alloc"] }
itoa = "1.0.17"

[dev-dependencies]
env_logger = "0.11.8"
multiqueue = "0.3.2"
rand = "0.9.2"
ringbuf = "0.4.8"
sha256 = "1.6.0"

[features]
default = ["std"]
defmt = ["embedded-io/defmt", "dep:defmt"]
log = ["dep:log"]
std = ["thiserror", "serde/std", "log", "log/std"]

[[example]]
name = "cp"
required-features = ["std"]

[[example]]
name = "pd"
required-features = ["std"]
