[package]
name = "osdpctl"
version = "0.0.1"
edition = "2021"
authors = ["Siddharth Chandrasekaran <sidcha.dev@gmail.com>"]
description = "Tool to help setup, manage and control OSDP devices"
documentation = "https://doc.osdp.dev/osdpctl/introduction.html"
homepage = "https://doc.osdp.dev/"
readme = "README.md"
repository = "https://github.com/goToMain/libosdp-rs"
license = "Apache-2.0"
keywords = ["osdp", "libosdp", "osdpctl"]
categories = ["development-tools", "embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = "4.5.54"
configparser = "3.1.0"
daemonize = "0.5.0"
dirs = "6.0.0"
libosdp = { path = "../libosdp" }
log = "0.4.29"
log4rs = "1.4.0"
nix = { version = "0.31.1", features = ["signal"] }
rand = "0.9.2"
toml = "0.9.11"
